--- a/source/js/hb-comment/hb-comment.css
+++ b/source/js/hb-comment/hb-comment.css
@@ -8,6 +8,11 @@
     to { transform: translateY(0) }
 }
 
+@keyframes slideInRight {
+    from { transform: translateX(10%) }
+    to { transform: translateX(0) }
+}
+
 .hb-comment {
     position: relative;
 }
@@ -17,11 +22,13 @@
 .hb-comment a:active,
 .hb-comment a:visited {
     text-decoration: none;
-    color:  #8fabbb;
+    color:  #67c23a;
 }
 
-.hb-comment h2 {
+.hb-comment h2.h2 {
     display: inline-block;
+    font-size: 2.2rem;
+    font-weight: bold;
 }
 
 .hb-comment ul li {
@@ -44,18 +51,18 @@
     animation-name: fadeIn;
 }
 
-.hb-w-body .hb-w-body-item .main {
+.hb-w-body .hb-w-body-item .hb-main {
     width:  100%;
 }
 
-.hb-w-body .hb-w-body-item .main .info {
+.hb-w-body .hb-w-body-item .hb-main .info {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
 .hb-w-body .hb-w-body-item .avatar {
-    width: 76px;
+    width: 64px !important;
 }
 
 .hb-w-body .hb-w-body-item .avatar img,
@@ -64,7 +71,14 @@
 }
 
 .hb-w-body .hb-w-body-item .change_avatar {
-    display: inline-block;
+    display: block;
+    width: 48px;
+    margin: 0 auto;
+    color: #afb2c1;
+}
+
+.hb-w-body .hb-w-body-item .change_avatar:hover {
+    color: #67c23a;
 }
 
 .hb-w-body .hb-comment-info {
@@ -80,6 +94,8 @@
 }
 
 .hb-w-body .hb-comment-info .label {
+    width: 66px;
+    padding: 0 0.4rem !important;
     color: #616268;
     font-size: 15px;
     text-align: left;
@@ -90,7 +106,7 @@
 }
 
 .hb-w-body .hb-comment-info input {
-    width: calc(100% - 54px);
+    width: 100%;
     outline: none;
     font-size: 14px;
     border: 1px solid #afb2c1;
@@ -110,7 +126,8 @@
     outline: none;
     font-size: 14px;
     border: 1px solid #afb2c1;
-    padding-left: 10px;
+    padding: 10px 0 0 10px;
+    box-sizing: border-box;
 }
 .hb-w-body .hb-comment-help {
     position: relative;
@@ -120,21 +137,37 @@
     flex-wrap: wrap;
 }
 
-.hb-w-body .hb-comment-help .emoji_btn {
-    cursor: pointer;
+.hb-w-body .hb-comment-help .emoji-btn {
+    border: 1px solid #afb2c1;
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    padding: 0 0.3rem;
+    text-align: center;
+    line-height: 32px;
+    border-radius: 3px;
+    color: #afb2c1;
 }
 
-.hb-w-body .hb-comment-help .emoji_btn:hover {
-    color: #8fabbb;
+.hb-w-body .hb-comment-help .emoji-btn:hover,
+.hb-w-body .hb-comment-help .emoji-btn:active{
+    color: #67c23a;
 }
 
 .hb-w-body .hb-comment-help .emoji-panel {
     margin-top: 5px;
-    box-shadow: 0 1px 10px #aaa;
+    padding-top: 12px;
+    box-shadow: 0 1px 10px #d7dadd;
     max-height: 16.5rem;
     overflow: hidden;
     animation-duration: .5s;
     animation-name: slideIn;
+}
+
+.hb-w-body .hb-comment-help .emoji-panel .emoji-tab-box {
+    clear: both;
+    border-top: 1px solid #f1f1f1;
+    height: 32px;
 }
 
 .hb-w-body .hb-comment-help .emoji-panel .emoji-ul {
@@ -167,7 +200,9 @@
 
 .hb-w-body .hb-comment-help .emoji-panel li img {
     position: absolute;
-    top: 4px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     max-width: 30px;
     max-height: 30px;
 }
@@ -181,11 +216,13 @@
 .hb-w-body .hb-comment-help .emoji-panel .emoji-tab:hover,
 .hb-w-body .hb-comment-help .emoji-panel .emoji-tab.active {
     background: #eee;
+    height: 32px;
+    display: inline-block;
 }
 
 .hb-w-body .hb-comment-help a.emoji-btn,
 .hb-w-body .hb-comment-help a.emoji-btn:visited {
-    color:  #8fabbb;
+    color:  #67c23a;
 }
 
 .hb-w-body .hb-comment-help button {
@@ -201,42 +238,53 @@
     color: #fff;
 }
 
+.hb-r-body .hb-r-body-box {
+    border-bottom: 1px solid #f0f1f5;
+    padding-bottom: 2rem;
+}
+
 .hb-w-body .hb-w-body-item,
 .hb-r-body .hb-r-body-item {
     display: flex;
     flex-direction: row;
     word-break: break-all;
-    margin: 2rem 0;
-    border-bottom: 1px solid #f0f1f5;
+    margin-top: 2rem;
+}
+
+.hb-w-body.clone {
+    animation-duration: .5s;
+    animation-name: slideIn;
+}
+
+.hb-w-body .hb-w-body-item {
     padding-bottom: 2rem;
 }
 
-.hb-r-body .hb-r-body-item .main {
+.hb-r-body .hb-r-body-item .hb-main {
     width: 100%;
-    margin-left: 2rem;
+    margin-left: 1.2rem;
 }
 
-.hb-r-body .hb-r-body-item .main .info {
+.hb-r-body .hb-r-body-item .hb-main .info {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.hb-r-body .hb-r-body-item .main .info .action-reply {
-    color: #b4bbbd;
+.hb-r-body .hb-r-body-item .hb-main .info .action-reply {
+    color: #afb2c1;
 }
-.hb-r-body .hb-r-body-item .main .info .action-reply:hover {
-    color: #8fabbb;
+.hb-r-body .hb-r-body-item .hb-main .info .action-reply:hover {
+    color: #67c23a;
 }
-.hb-r-body .hb-r-body-item .main .info .nickname {
+.hb-r-body .hb-r-body-item .hb-main .info .nickname {
     font-weight: bold;
     font-size: 15px;
     margin-bottom: 1rem;
 }
-.hb-r-body .hb-r-body-item .main .info .blogger {
+.hb-r-body .hb-r-body-item .hb-main .info .blogger {
     padding: 2px 4px;
     font-size: 12px;
-
     background-color: #67c23a20;
     border: 1px solid #67c23a80;
     border-radius: 2px;
@@ -299,7 +347,6 @@
 
 .hb-r-body .hb-r-pagination ul li {
     float: left;
-    background-color: #f5f8f9;
     margin: 0 5px;
     border-radius: 2px;
 }
@@ -311,11 +358,12 @@
     height: 32px;
     padding: 5px;
     border-radius: 2px;
+    border: 1px solid #67c23a80;
 }
 
 .hb-r-body .hb-r-pagination ul li.active a,
 .hb-r-body .hb-r-pagination ul li a:hover {
-    background-color: #7794a5;
+    background-color: #67c23a;
     color: #fff;
 }
 
@@ -339,7 +387,7 @@
     text-align: center;
 }
 
-.comment_send_info {
+.comment-send-info {
     border-radius: .25rem;
     padding: 15px;
     margin-bottom: 20px;
@@ -351,28 +399,23 @@
 
 .hb-comment-tip {
     position: fixed;
-    top: 50%;
-    left: 50%;
+    bottom: 2rem;
+    right: 2rem;
     min-width: 166px;
     min-height: 32px;
     line-height: 32px;
     padding: 1rem 1.5rem;
     color: #fff;
+    border-radius: 3px;
     text-align: center;
     background-color: rgba(0, 0, 0, .4);
-    transform: translate(-50%, -50%);
     font-size: 16px;
     box-shadow: 0 1px 10px #aaa;
     animation-duration: 1s;
-    animation-name: fadeIn;
+    animation-name: slideInRight;
 }
 
 @media (max-width: 767px) {
-
-    .hb-w-body.clone {
-        transform: translateX(-7rem);
-        width: calc(100% + 7rem);
-     }
 
     .hb-w-body .hb-comment-info {
         display: flex;
